--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+  <div class="wip-banner">
+    <strong>Work in Progress</strong>
+    <span>This content is not ready for distribution</span>
+  </div>
   {% block content %}{% endblock %}
 </body>
 </html>
